Corrections in Thesis after feedback

--- a/Thesis/diagrams/temptate.tex
+++ b/Thesis/diagrams/temptate.tex
@@ -1,8 +1,9 @@
-\documentclass[border=0.2cm]{standalone}
+\documentclass[border=0.2cm,preview]{standalone}
 
 \fontsize{10}{12}\selectfont
 
 \usepackage{amsmath}
+\usepackage{mathdots}
 \usepackage{pgfplots}
 \usepackage{tikz}
 \usetikzlibrary{calc}
