--- a/Thesis/thesis.bib
+++ b/Thesis/thesis.bib
@@ -1,11 +1,11 @@
+%TODO clear up inproceedings 
 %=====================================================================================================================
 %matrix structures
 %=====================================================================================================================
-@article{vandebril_bibliography_2005,
+@article{vandebril_bibliography_2005,%TODO * in title
 	title = {A bibliography on semiseparable matrices*},
 	volume = {42},
 	issn = {1126-5434},
-	url = {https://doi.org/10.1007/s10092-005-0107-z},
 	doi = {10.1007/s10092-005-0107-z},
 	abstract = {Currently there is a growing interest in semiseparable matrices and generalized semiseparable matrices. To gain an appreciation of the historical evolution of this concept, we present in this paper an extensive list of publications related to the field of semiseparable matrices. It is interesting to see that semiseparable matrices were investigated in different fields, e.g., integral equations, statistics, vibrational analysis, independently of each other. Also notable is the fact that leading statisticians at that time used semiseparable matrices without knowing their inverses to be tridiagonal. During this historical evolution the definition of semiseparable matrices has always been a difficult point leading to misunderstandings; sometimes they were defined as the inverses of irreducible tridiagonal matrices leading to generator representable matrices, while in other cases they were defined as matrices having low rank blocks below the diagonal.},
 	pages = {249--270},
@@ -13,7 +13,6 @@
 	journaltitle = {{CALCOLO}},
 	shortjournal = {Calcolo},
 	author = {Vandebril, R. and Barel, M. Van and Golub, G. and Mastronardi, N.},
-	urldate = {2021-09-14},
 	date = {2005-12-01},
 	langid = {english},
 }
@@ -22,24 +21,19 @@
 	location = {Baltimore, {UNITED} {STATES}},
 	title = {Matrix Computations and Semiseparable Matrices},
 	isbn = {978-0-8018-9679-8},
-	url = {http://ebookcentral.proquest.com/lib/munchentech/detail.action?docID=3318415},
 	shorttitle = {Matrix Computations and Semiseparable Matrices},
 	abstract = {In recent years several new classes of matrices have been discovered and their structure exploited to design fast and accurate algorithms. In this new reference work, Raf Vandebril, Marc Van Barel, and Nicola Mastronardi present the first comprehensive overview of the mathematical and numerical properties of the family's newest member: semiseparable matrices. The text is divided into three parts. The first provides some historical background and introduces concepts and definitions concerning structured rank matrices. The second offers some traditional methods for solving systems of equations involving the basic subclasses of these matrices. The third section discusses structured rank matrices in a broader context, presents algorithms for solving higher-order structured rank matrices, and examines hybrid variants such as block quasiseparable matrices. An accessible case study clearly demonstrates the general topic of each new concept discussed. Many of the routines featured are implemented in Matlab and can be downloaded from the Web for further exploration.},
 	publisher = {Johns Hopkins University Press},
 	author = {Vandebril, Raf and Mastronardi, Nicola and Van Barel, Marc},
-	urldate = {2021-09-14},
 	date = {2007},
 	keywords = {Matrices -- Data processing., Numerical analysis., Semiseparable matrices.},
 	file = {Vandebril et al. - 2007 - Matrix Computations and Semiseparable Matrices Li.pdf:/home/stephan/snap/zotero-snap/common/Zotero/storage/N72WNGWM/Vandebril et al. - 2007 - Matrix Computations and Semiseparable Matrices Li.pdf:application/pdf},
 }
 
-@article{grasedyck_theorie_2001,
+@article{grasedyck_theorie_2001,%TODO: convert to thesis
 	title = {Theorie und Anwendungen Hierarchischer Matrizen},
-	rights = {https://rightsstatements.org/page/{InC}/1.0/},
-	url = {https://macau.uni-kiel.de/receive/diss_mods_00000454},
 	abstract = {The modeling of physical properties often leads to the task of solving partial differential equations or integral equations. The results of some discretisation and linearisation process are matrix equations or linear systems of equations with special features. In the case of partial differential equations one exploits the local character of the differentiation by using some finite element method or finite difference scheme and gains a sparse system matrix. In the case of (nonlocal) integral operators low rank approximations seem to be the method of choice. These are either given explicitly by some multipole method or panel clustering technique or implicitly by rank revealing decompositions. Both types of matrices can be represented as so-called H-matrices. In this thesis we investigate algorithms that perform the addition, multiplication and inversion of H-matrices approximately. Under moderate assumptions the complexity of these new arithmetics is almost linear (linear up to logarithmic terms of order 1 to 3). The arithmetic operations can be performed adaptively, that is up to some given accuracy epsilon the relative error of the operations is zero. The question arises under which circumstances the inverse of an H-matrix can be approximated by an H-matrix. For the techniques used in this thesis we need very restrictive assumptions, but the numerical examples in the last part indicate that the approximability does not depend on these assumptions.},
 	author = {Grasedyck, Lars},
-	urldate = {2022-01-14},
 	date = {2001-08-27},
 	langid = {german},
 	note = {Accepted: 2001-07-20},
@@ -49,11 +43,9 @@
 	location = {Berlin, Heidelberg},
 	title = {Hierarchische Matrizen: Algorithmen und Analysis},
 	isbn = {978-3-642-00222-9},
-	url = {https://doi.org/10.1007/978-3-642-00222-9},
 	publisher = {Springer},
 	author = {Hackbusch, Wolfgang},
 	editor = {Hackbusch, Wolfgang},
-	urldate = {2022-01-14},
 	date = {2009},
 	langid = {german},
 	doi = {10.1007/978-3-642-00222-9},
@@ -78,7 +70,6 @@
 	title = {Some Fast Algorithms for Sequentially Semiseparable Representations},
 	volume = {27},
 	issn = {0895-4798},
-	url = {https://epubs.siam.org/doi/abs/10.1137/S0895479802405884},
 	doi = {10.1137/S0895479802405884},
 	abstract = {An extended sequentially semiseparable ({SSS}) representation derived from time-varying system theory is used to capture, on the one hand, the low-rank of the off-diagonal blocks of a matrix for the purposes of efficient computations and, on the other, to provide for sufficient descriptive richness to allow for backward stability in the computations. We present (i) a fast algorithm (linear in the number of equations) to solve least squares problems in which the coefficient matrix is in {SSS} form, (ii) a fast algorithm to find the {SSS} form of X such that \${AX}=B\$, where A and B are in {SSS} form, and (iii) a fast model reduction technique to improve the {SSS} form.},
 	pages = {341--364},
@@ -86,7 +77,6 @@
 	journaltitle = {{SIAM} Journal on Matrix Analysis and Applications},
 	shortjournal = {{SIAM} J. Matrix Anal. Appl.},
 	author = {Chandrasekaran, S. and Dewilde, P. and Gu, M. and Pals, T. and Sun, X. and van der Veen, A. J. and White, D.},
-	urldate = {2022-03-05},
 	date = {2005-01},
 	note = {Publisher: Society for Industrial and Applied Mathematics},
 	keywords = {65F30, 65F05, 65F20, backward stability, fast direct solver, fast multipole method, integral equations, method of moments, Moore--Penrose inverses, scattering theory, semiseparable matrices, spectral methods, time-varying systems},
@@ -113,7 +103,6 @@
 	institution = {Technische Universiteit Delft},
 	type = {phdthesis},
 	author = {Rice, J. K.},
-	urldate = {2022-03-05},
 	date = {2010},
 	langid = {english},
 	file = {Full Text PDF:/home/stephan/snap/zotero-snap/common/Zotero/storage/AZ7AY7DS/Rice - 2010 - Efficient Algorithms for Distributed Control A St.pdf:application/pdf;Snapshot:/home/stephan/snap/zotero-snap/common/Zotero/storage/INIANNV2/uuid50460cc9-2aba-4db5-b602-5373bb0bc609.html:text/html},
@@ -214,20 +203,18 @@
 @book{antoulas_approximation_2005,
 	title = {Approximation of Large-Scale Dynamical Systems},
 	isbn = {978-0-89871-871-3},
-	url = {https://doi.org/10.1137/1.9780898718713},
 	series = {Advances in Design and Control},
 	publisher = {Society for Industrial and Applied Mathematics},
 	author = {Antoulas, Athanasios C.},
 	date = {2005},
 	doi = {10.1137/1.9780898718713},
-	note = {\_eprint: https://epubs.siam.org/doi/pdf/10.1137/1.9780898718713},	
+	%note = {\_eprint: https://epubs.siam.org/doi/pdf/10.1137/1.9780898718713},	
 }
 
 @article{shokoohi_identification_1987,
 	title = {Identification and model reduction of time-varying discrete-time systems},
 	volume = {23},
 	issn = {0005-1098},
-	url = {https://www.sciencedirect.com/science/article/pii/000510988790080X},
 	doi = {10.1016/0005-1098(87)90080-X},
 	abstract = {Linear, discrete, time-variable systems are considered, and an important class of uniform realizations is defined. The necessary and sufficient conditions for a pulse response to be uniformly realizable are obtained. Two model reduction schemes, one via balanced realizations and the other via Hankel matrix are proposed. The latter approach can be considered as an identification algorithm for the two-dimensional pulse response sequence h(k, i). It is shown that the two approaches yield an identical reduced model which is always asymptotically stable.},
 	pages = {509--521},
@@ -235,11 +222,54 @@
 	journaltitle = {Automatica},
 	shortjournal = {Automatica},
 	author = {Shokoohi, Shahriar and Silverman, Leonard M.},
-	urldate = {2022-04-12},
 	date = {1987-07-01},
 	langid = {english},
 	keywords = {time-varying systems, Discrete time systems, identification, linear systems, stability, system-order reduction},
 	file = {Identification and model reduction of time-varying discrete-time systems  Leonard Silverman - Academia.html:/home/stephan/snap/zotero-snap/common/Zotero/storage/7KPAD4CM/Identification and model reduction of time-varying discrete-time systems  Leonard Silverman - Academia.html:text/html;Shokoohi und Silverman - 1987 - Identification and model reduction of time-varying.pdf:/home/stephan/snap/zotero-snap/common/Zotero/storage/4GPVZV79/Shokoohi und Silverman - 1987 - Identification and model reduction of time-varying.pdf:application/pdf},
+}
+
+@article{hinrichsen_improved_1990,
+	title = {An improved error estimate for reduced-order models of discrete-time systems},
+	volume = {35},
+	pages = {317--320},
+	number = {3},
+	journaltitle = {{IEEE} Transactions on Automatic Control},
+	author = {Hinrichsen, D and Pritchard, {AJ}},
+	date = {1990},
+	file = {Hinrichsen und Pritchard - 1990 - An improved error estimate for reduced-order model.pdf:/home/stephan/snap/zotero-snap/common/Zotero/storage/ERK3NDKS/Hinrichsen und Pritchard - 1990 - An improved error estimate for reduced-order model.pdf:application/pdf},
+}
+
+
+@article{adamjan_analytic_1971,
+	title = {{ANALYTIC} {PROPERTIES} {OF} {SCHMIDT} {PAIRS} {FOR} A {HANKEL} {OPERATOR} {AND} {THE} {GENERALIZED} {SCHUR}-{TAKAGI} {PROBLEM}},
+	volume = {15},
+	issn = {0025-5734},
+	doi = {10.1070/SM1971v015n01ABEH001531},
+	pages = {31},
+	number = {1},
+	journaltitle = {Mathematics of the {USSR}-Sbornik},
+	shortjournal = {Math. {USSR} Sb.},
+	author = {Adamjan, V. M. and Arov, D. Z. and Kreĭn, M. G.},
+	date = {1971-02-28},
+	langid = {english},
+	note = {Publisher: {IOP} Publishing},
+	file = {Adamjan et al. - 1971 - ANALYTIC PROPERTIES OF SCHMIDT PAIRS FOR A HANKEL .pdf:/home/stephan/snap/zotero-snap/common/Zotero/storage/JMKPXXEC/Adamjan et al. - 1971 - ANALYTIC PROPERTIES OF SCHMIDT PAIRS FOR A HANKEL .pdf:application/pdf},
+}
+
+@article{lall_error-bounds_2003,
+	title = {Error-bounds for balanced model-reduction of linear time-varying systems},
+	volume = {48},
+	issn = {1558-2523},
+	doi = {10.1109/TAC.2003.812779},
+	abstract = {Error-bounds are developed for balanced truncation of linear time-varying systems, leading to an extension of the "twice the sum of the tail" formulas, well known in the time-invariant case. The approach relies on an operator-theoretic framework for analysis of linear time-varying systems. This provides a multivariable notion of frequency for such systems, which are thus characterized by rational functions of many complex variables, allowing the problem to be formulated in the linear-fractional framework. Using a time-varying version of standard necessary conditions for reduced-order modeling, based on convex operator inequalities, we show that these error-bounds for balanced truncation are related to the closest possible reduced-order modeling error in a sense which parallels the time-invariant case.},
+	pages = {946--956},
+	number = {6},
+	journaltitle = {{IEEE} Transactions on Automatic Control},
+	author = {Lall, S. and Beck, C.},
+	date = {2003-06},
+	note = {Conference Name: {IEEE} Transactions on Automatic Control},
+	keywords = {Analytical models, Computational modeling, Control system synthesis, Extraterrestrial measurements, Frequency, Mathematical model, Physics computing, Reduced order systems, Time varying systems, Upper bound},
+	file = {IEEE Xplore Abstract Record:/home/stephan/snap/zotero-snap/common/Zotero/storage/G7VNNS7J/1205189.html:text/html;IEEE Xplore Full Text PDF:/home/stephan/snap/zotero-snap/common/Zotero/storage/6XJNE4U9/Lall und Beck - 2003 - Error-bounds for balanced model-reduction of linea.pdf:application/pdf},
 }
 
 %=====================================================================================================================
@@ -248,11 +278,9 @@
 
 @inproceedings{yu_compressing_2017,
 	title = {On Compressing Deep Models by Low Rank and Sparse Decomposition},
-	url = {https://openaccess.thecvf.com/content_cvpr_2017/html/Yu_On_Compressing_Deep_CVPR_2017_paper.html},
 	eventtitle = {Proceedings of the {IEEE} Conference on Computer Vision and Pattern Recognition},
 	pages = {7370--7379},
 	author = {Yu, Xiyu and Liu, Tongliang and Wang, Xinchao and Tao, Dacheng},
-	urldate = {2021-11-23},
 	date = {2017},
 	file = {Snapshot:/home/stephan/snap/zotero-snap/common/Zotero/storage/QQT5PMEQ/Yu_On_Compressing_Deep_CVPR_2017_paper.html:text/html;Full Text PDF:/home/stephan/snap/zotero-snap/common/Zotero/storage/2ABSW4SD/Yu et al. - 2017 - On Compressing Deep Models by Low Rank and Sparse .pdf:application/pdf},
 }
@@ -261,7 +289,6 @@
 	title = {A Multiscale Neural Network Based on Hierarchical Matrices},
 	volume = {17},
 	issn = {1540-3459},
-	url = {https://epubs.siam.org/doi/abs/10.1137/18M1203602},
 	doi = {10.1137/18M1203602},
 	abstract = {In this work we introduce a new multiscale artificial neural network based on the structure of \${\textbackslash}mathcal\{H\}\$-matrices. This network generalizes the latter to the nonlinear case by introducing a local deep neural network at each spatial scale. Numerical results indicate that the network is able to efficiently approximate discrete nonlinear maps obtained from discretized nonlinear partial differential equations, such as those arising from nonlinear Schrödinger equations and the Kohn--Sham density functional theory.},
 	pages = {1189--1213},
@@ -269,7 +296,6 @@
 	journaltitle = {Multiscale Modeling \& Simulation},
 	shortjournal = {Multiscale Model. Simul.},
 	author = {Fan, Yuwei and Lin, Lin and Ying, Lexing and Zepeda-Núñez, Leonardo},
-	urldate = {2022-02-18},
 	date = {2019-01},
 	note = {Publisher: Society for Industrial and Applied Mathematics},
 	keywords = {\${\textbackslash}mathcal\{H\}\$-matrix, 60H35, 65F30, 65M75, convolutional neural network, locally connected neural network, multiscale neural network},
@@ -280,14 +306,12 @@
 	title = {Hybrid tensor decomposition in neural network compression},
 	volume = {132},
 	issn = {0893-6080},
-	url = {https://www.sciencedirect.com/science/article/pii/S0893608020303294},
 	doi = {10.1016/j.neunet.2020.09.006},
 	abstract = {Deep neural networks ({DNNs}) have enabled impressive breakthroughs in various artificial intelligence ({AI}) applications recently due to its capability of learning high-level features from big data. However, the current demand of {DNNs} for computational resources especially the storage consumption is growing due to that the increasing sizes of models are being required for more and more complicated applications. To address this problem, several tensor decomposition methods including tensor-train ({TT}) and tensor-ring ({TR}) have been applied to compress {DNNs} and shown considerable compression effectiveness. In this work, we introduce the hierarchical Tucker ({HT}), a classical but rarely-used tensor decomposition method, to investigate its capability in neural network compression. We convert the weight matrices and convolutional kernels to both {HT} and {TT} formats for comparative study, since the latter is the most widely used decomposition method and the variant of {HT}. We further theoretically and experimentally discover that the {HT} format has better performance on compressing weight matrices, while the {TT} format is more suited for compressing convolutional kernels. Based on this phenomenon we propose a strategy of hybrid tensor decomposition by combining {TT} and {HT} together to compress convolutional and fully connected parts separately and attain better accuracy than only using the {TT} or {HT} format on convolutional neural networks ({CNNs}). Our work illuminates the prospects of hybrid tensor decomposition for neural network compression.},
 	pages = {309--320},
 	journaltitle = {Neural Networks},
 	shortjournal = {Neural Networks},
 	author = {Wu, Bijiao and Wang, Dingheng and Zhao, Guangshe and Deng, Lei and Li, Guoqi},
-	urldate = {2022-02-18},
 	date = {2020-12-01},
 	langid = {english},
 	keywords = {Balanced structure, Hierarchical Tucker, Hybrid tensor decomposition, Neural network compression, Tensor-train},
@@ -309,12 +333,10 @@
 
 @inproceedings{dao_kaleidoscope_2020,
 	title = {Kaleidoscope: An Efficient, Learnable Representation For All Structured Linear Maps},
-	url = {https://iclr.cc/virtual_2020/poster_BkgrBgSYDS.html},
 	shorttitle = {Kaleidoscope},
 	abstract = {Modern neural network architectures use structured linear transformations, such as low-rank matrices, sparse matrices, permutations, and the Fourier transform, to improve inference speed and reduce memory usage compared to general linear maps. However, choosing which of the myriad structured transformations to use (and its associated parameterization) is a laborious task that requires trading off speed, space, and accuracy. We consider a different approach: we introduce a family of matrices called kaleidoscope matrices (K-matrices) that provably capture any structured matrix with near-optimal space (parameter) and time (arithmetic operation) complexity. We empirically validate that K-matrices can be automatically learned within end-to-end pipelines to replace hand-crafted procedures, in order to improve model quality. For example, replacing channel shuffles in {ShuffleNet} improves classification accuracy on {ImageNet} by up to 5\%. K-matrices can also simplify hand-engineered pipelines---we replace filter bank feature computation in speech data preprocessing with a learnable kaleidoscope layer, resulting in only 0.4\% loss in accuracy on the {TIMIT} speech recognition task. In addition, K-matrices can capture latent structure in models: for a challenging permuted image classification task, adding a K-matrix to a standard convolutional architecture can enable learning the latent permutation and improve accuracy by over 8 points. We provide a practically efficient implementation of our approach, and use K-matrices in a Transformer network to attain 36\% faster end-to-end inference speed on a language translation task.},
 	eventtitle = {Eighth International Conference on Learning Representations},
 	author = {Dao, Tri and Sohoni, Nimit and Gu, Albert and Eichhorn, Matthew and Blonder, Amit and Leszczynski, Megan and Rudra, Atri and Ré, Christopher},
-	urldate = {2022-02-18},
 	date = {2020-04},
 	langid = {english},
 	file = {Full Text PDF:/home/stephan/snap/zotero-snap/common/Zotero/storage/NNEJ8H7Z/Dao et al. - 2020 - Kaleidoscope An Efficient, Learnable Representati.pdf:application/pdf;Snapshot:/home/stephan/snap/zotero-snap/common/Zotero/storage/CP5X4RFB/poster_BkgrBgSYDS.html:text/html},
@@ -324,7 +346,6 @@
 	title = {Butterfly-Net: Optimal Function Representation Based on Convolutional Neural Networks},
 	volume = {28},
 	issn = {1815-2406, 1991-7120},
-	url = {http://global-sci.org/intro/article_detail/cicp/18398.html},
 	doi = {10.4208/cicp.OA-2020-0214},
 	shorttitle = {Butterfly-Net},
 	pages = {1838--1885},
@@ -332,19 +353,16 @@
 	journaltitle = {Communications in Computational Physics},
 	shortjournal = {{CiCP}},
 	author = {Li, Yingzhou and Cheng, Xiuyuan and Lu, Jianfeng},
-	urldate = {2022-02-18},
 	date = {2020-06},
 	file = {Eingereichte Version:/home/stephan/snap/zotero-snap/common/Zotero/storage/VSC87ETK/Li - 2020 - Butterfly-Net Optimal Function Representation Bas.pdf:application/pdf;1805.07451.pdf:/home/stephan/snap/zotero-snap/common/Zotero/storage/PK5NHZ4F/1805.07451.pdf:application/pdf},
 }
 
 @article{dettmers_sparse_2019,
 	title = {Sparse Networks from Scratch: Faster Training without Losing Performance},
-	url = {http://arxiv.org/abs/1907.04840},
 	shorttitle = {Sparse Networks from Scratch},
 	abstract = {We demonstrate the possibility of what we call sparse learning: accelerated training of deep neural networks that maintain sparse weights throughout training while achieving dense performance levels. We accomplish this by developing sparse momentum, an algorithm which uses exponentially smoothed gradients (momentum) to identify layers and weights which reduce the error efficiently. Sparse momentum redistributes pruned weights across layers according to the mean momentum magnitude of each layer. Within a layer, sparse momentum grows weights according to the momentum magnitude of zero-valued weights. We demonstrate state-of-the-art sparse performance on {MNIST}, {CIFAR}-10, and {ImageNet}, decreasing the mean error by a relative 8\%, 15\%, and 6\% compared to other sparse algorithms. Furthermore, we show that sparse momentum reliably reproduces dense performance levels while providing up to 5.61x faster training. In our analysis, ablations show that the benefits of momentum redistribution and growth increase with the depth and size of the network. Additionally, we find that sparse momentum is insensitive to the choice of its hyperparameters suggesting that sparse momentum is robust and easy to use.},
 	journaltitle = {{arXiv}:1907.04840 [cs, stat]},
 	author = {Dettmers, Tim and Zettlemoyer, Luke},
-	urldate = {2022-02-18},
 	date = {2019-08-23},
 	eprinttype = {arxiv},
 	eprint = {1907.04840},
@@ -356,7 +374,6 @@
 	title = {Butterfly Factorization},
 	volume = {13},
 	issn = {1540-3459},
-	url = {https://epubs.siam.org/doi/abs/10.1137/15M1007173},
 	doi = {10.1137/15M1007173},
 	abstract = {The paper introduces the butterfly factorization as a data-sparse approximation for the matrices that satisfy a complementary low-rank property. The factorization can be constructed efficiently if either fast algorithms for applying the matrix and its adjoint are available or the entries of the matrix can be sampled individually. For an \$N{\textbackslash}times N\$ matrix, the resulting factorization is a product of \$O({\textbackslash}log N)\$ sparse matrices, each with \$O(N)\$ nonzero entries. Hence, it can be applied rapidly in \$O(N{\textbackslash}log N)\$ operations. Numerical results are provided to demonstrate the effectiveness of the butterfly factorization and its construction algorithms.},
 	pages = {714--732},
@@ -364,14 +381,13 @@
 	journaltitle = {Multiscale Modeling \& Simulation},
 	shortjournal = {Multiscale Model. Simul.},
 	author = {Li, Yingzhou and Yang, Haizhao and Martin, Eileen R. and Ho, Kenneth L. and Ying, Lexing},
-	urldate = {2022-02-18},
 	date = {2015-01},
 	note = {Publisher: Society for Industrial and Applied Mathematics},
 	keywords = {44A55, 65R10, 65T50, butterfly algorithm, data-sparse matrix, Fourier integral operators, matrix factorization, operator compression, randomized algorithm, special functions},
 	file = {Eingereichte Version:/home/stephan/snap/zotero-snap/common/Zotero/storage/N6HLAF8X/Li et al. - 2015 - Butterfly Factorization.pdf:application/pdf},
 }
 
-@report{parker_random_1995,
+@report{parker_random_1995,%TODO full url
 	title = {Random Butterfly Transformations with Applications in Computational Linear Algebra},
 	url = {http://web.cs.ucla.edu/~stott/},
 	abstract = {Theory and practice of computational linear algebra differ over the issue of degeneracy. Block matrix decompositions are used heavily in theory, but less in practice, since even when a matrix is nondegenerate (has full rank) its block submatrices can be degenerate. The potential degeneracy of block submatrices can completely prevent practical use of block matrix algorithms. Gaussian elimination is an important example of an algorithm affected by the possibility of degeneracy. While the basic elimination procedure is simple to state and implement, it becomes more complicated with the addition of a pivoting procedure, which handles degenerate matrices having zeros on the diagonal. Pivoting can significantly complicate the algorithm, increase data movement, and reduce speed, particularly on high-performance computers. We propose a randomization scheme that preconditions an input matrix by multiplying it with random matrices, where this multiplication can be performed efficiently. At the e...},
@@ -382,11 +398,10 @@
 
 @inproceedings{louizos_learning_2018,
 	title = {Learning Sparse Neural Networks through L\_0 Regularization},
-	url = {https://openreview.net/forum?id=H1Y8hhg0b},
+	%url = {https://openreview.net/forum?id=H1Y8hhg0b},
 	abstract = {We show how to optimize the expected L\_0 norm of parametric models with gradient descent and introduce a new distribution that facilitates hard gating.},
 	eventtitle = {International Conference on Learning Representations},
 	author = {Louizos, Christos and Welling, Max and Kingma, Diederik P.},
-	urldate = {2022-02-21},
 	date = {2018-02-15},
 	langid = {english},
 	file = {Full Text PDF:/home/stephan/snap/zotero-snap/common/Zotero/storage/EA9QZ2PR/Louizos et al. - 2018 - Learning Sparse Neural Networks through L_0 Regula.pdf:application/pdf;Snapshot:/home/stephan/snap/zotero-snap/common/Zotero/storage/5XND2X2A/forum.html:text/html},
@@ -395,18 +410,17 @@
 @inproceedings{wen_learning_2016,
 	title = {Learning Structured Sparsity in Deep Neural Networks},
 	volume = {29},
-	url = {https://proceedings.neurips.cc/paper/2016/hash/41bfd20a38bb1b0bec75acf0845530a7-Abstract.html},
+	%url = {https://proceedings.neurips.cc/paper/2016/hash/41bfd20a38bb1b0bec75acf0845530a7-Abstract.html},
 	booktitle = {Advances in Neural Information Processing Systems},
 	publisher = {Curran Associates, Inc.},
 	author = {Wen, Wei and Wu, Chunpeng and Wang, Yandan and Chen, Yiran and Li, Hai},
-	urldate = {2022-02-21},
 	date = {2016},
 	file = {Full Text PDF:/home/stephan/snap/zotero-snap/common/Zotero/storage/P8C4LBEC/Wen et al. - 2016 - Learning Structured Sparsity in Deep Neural Networ.pdf:application/pdf},
 }
 
 @inproceedings{ailon_sparse_2021,
 	title = {Sparse linear networks with a fixed butterfly structure: theory and practice},
-	url = {https://proceedings.mlr.press/v161/ailon21a.html},
+	%url = {https://proceedings.mlr.press/v161/ailon21a.html},
 	shorttitle = {Sparse linear networks with a fixed butterfly structure},
 	abstract = {A butterfly network consists of logarithmically many layers, each with a linear number of non-zero weights (pre-specified). The fast Johnson-Lindenstrauss transform ({FJLT}) can be represented as a butterfly network followed by a projection onto a random subset of the coordinates. Moreover, a random matrix based on {FJLT} with high probability approximates the action of any matrix on a vector. Motivated by these facts, we propose to replace a dense linear layer in any neural network by an architecture based on the butterfly network. The proposed architecture significantly improves upon the quadratic number of weights required in a standard dense layer to nearly linear with little compromise in expressibility of the resulting operator. In a collection of wide variety of experiments, including supervised prediction on both the {NLP} and vision data, we show that this not only produces results that match and at times outperform existing well-known architectures, but it also offers faster training and prediction in deployment. To understand the optimization problems posed by neural networks with a butterfly network, we also study the optimization landscape of the encoder-decoder network, where the encoder is replaced by a butterfly network followed by a dense linear layer in smaller dimension. Theoretical result presented in the paper explains why the training speed and outcome are not compromised by our proposed approach.},
 	eventtitle = {Uncertainty in Artificial Intelligence},
@@ -414,7 +428,6 @@
 	booktitle = {Proceedings of the Thirty-Seventh Conference on Uncertainty in Artificial Intelligence},
 	publisher = {{PMLR}},
 	author = {Ailon, Nir and Leibovitch, Omer and Nair, Vineet},
-	urldate = {2022-02-21},
 	date = {2021-12-01},
 	langid = {english},
 	note = {{ISSN}: 2640-3498},
@@ -423,7 +436,7 @@
 
 @inproceedings{jaderberg_speeding_2014,
 	title = {Speeding up Convolutional Neural Networks with Low Rank Expansions},
-	doi = {http://dx.doi.org/10.5244/C.28.88},
+	doi = {10.5244/C.28.88},
 	booktitle = {Proceedings of the British Machine Vision Conference},
 	publisher = {{BMVA} Press},
 	author = {Jaderberg, Max and Vedaldi, Andrea and Zisserman, Andrew},
@@ -431,12 +444,10 @@
 	file = {Jaderberg et al. - 2014 - Speeding up Convolutional Neural Networks with Low.pdf:/home/stephan/snap/zotero-snap/common/Zotero/storage/82EBBFY4/Jaderberg et al. - 2014 - Speeding up Convolutional Neural Networks with Low.pdf:application/pdf;paper073.pdf:/home/stephan/snap/zotero-snap/common/Zotero/storage/7SAHQC2J/paper073.pdf:application/pdf},
 }
 
-@inproceedings{ioannou_training_2016,
+@inproceedings{ioannou_training_2016,%TODO journal
 	title = {Training {CNNs} with Low-Rank Filters for Efficient Image Classification},
 	doi = {10.13140/RG.2.1.3727.8163},
-	abstract = {Published as a conference paper at {ICLR} 2016
-
-Trained Models at http://dx.doi.org/10.5281/zenodo.53189},
+	abstract = {Published as a conference paper at {ICLR} 2016 Trained Models at http://dx.doi.org/10.5281/zenodo.53189},
 	author = {Ioannou, Yani and Robertson, Duncan and Shotton, Jamie and Cipolla, Roberto and Criminisi, Antonio},
 	date = {2016-05-02},
 	file = {Full Text PDF:/home/stephan/snap/zotero-snap/common/Zotero/storage/HJPXHIUB/Ioannou et al. - 2016 - Training CNNs with Low-Rank Filters for Efficient .pdf:application/pdf},
@@ -445,11 +456,10 @@ Trained Models at http://dx.doi.org/10.5281/zenodo.53189},
 @article{blalock_what_2020,
 	title = {What is the State of Neural Network Pruning?},
 	volume = {2},
-	url = {https://proceedings.mlsys.org/paper/2020/hash/d2ddea18f00665ce8623e36bd4e3c7c5-Abstract.html},
+	%url = {https://proceedings.mlsys.org/paper/2020/hash/d2ddea18f00665ce8623e36bd4e3c7c5-Abstract.html},
 	pages = {129--146},
 	journaltitle = {Proceedings of Machine Learning and Systems},
 	author = {Blalock, Davis and Gonzalez Ortiz, Jose Javier and Frankle, Jonathan and Guttag, John},
-	urldate = {2022-02-21},
 	date = {2020-03-15},
 	langid = {english},
 	file = {Full Text PDF:/home/stephan/snap/zotero-snap/common/Zotero/storage/HEQQYRFR/Blalock et al. - 2020 - What is the State of Neural Network Pruning.pdf:application/pdf;Snapshot:/home/stephan/snap/zotero-snap/common/Zotero/storage/IJPBTXPB/d2ddea18f00665ce8623e36bd4e3c7c5-Abstract.html:text/html},
@@ -457,43 +467,63 @@ Trained Models at http://dx.doi.org/10.5281/zenodo.53189},
 
 @inproceedings{ithapu_decoding_2017,
 	title = {Decoding the Deep: Exploring Class Hierarchies of Deep Representations Using Multiresolution Matrix Factorization},
-	url = {https://openaccess.thecvf.com/content_cvpr_2017_workshops/w26/html/Ithapu_Decoding_the_Deep_CVPR_2017_paper.html},
+	%url = {https://openaccess.thecvf.com/content_cvpr_2017_workshops/w26/html/Ithapu_Decoding_the_Deep_CVPR_2017_paper.html},
 	shorttitle = {Decoding the Deep},
 	eventtitle = {Proceedings of the {IEEE} Conference on Computer Vision and Pattern Recognition Workshops},
 	pages = {45--54},
 	author = {Ithapu, Vamsi K.},
-	urldate = {2022-03-07},
 	date = {2017},
 	file = {Full Text PDF:/home/stephan/snap/zotero-snap/common/Zotero/storage/7432CCFJ/Ithapu - 2017 - Decoding the Deep Exploring Class Hierarchies of .pdf:application/pdf;Snapshot:/home/stephan/snap/zotero-snap/common/Zotero/storage/ZGMIYJI6/Ithapu_Decoding_the_Deep_CVPR_2017_paper.html:text/html},
 }
 
 @inproceedings{rigamonti_learning_2013,
 	title = {Learning Separable Filters},
-	url = {https://openaccess.thecvf.com/content_cvpr_2013/html/Rigamonti_Learning_Separable_Filters_2013_CVPR_paper.html},
+	%url = {https://openaccess.thecvf.com/content_cvpr_2013/html/Rigamonti_Learning_Separable_Filters_2013_CVPR_paper.html},
 	eventtitle = {Proceedings of the {IEEE} Conference on Computer Vision and Pattern Recognition},
 	pages = {2754--2761},
 	author = {Rigamonti, Roberto and Sironi, Amos and Lepetit, Vincent and Fua, Pascal},
-	urldate = {2022-03-10},
 	date = {2013},
 	file = {Full Text PDF:/home/stephan/snap/zotero-snap/common/Zotero/storage/RZVWQNRI/Rigamonti et al. - 2013 - Learning Separable Filters.pdf:application/pdf;Snapshot:/home/stephan/snap/zotero-snap/common/Zotero/storage/I6VNFB85/Rigamonti_Learning_Separable_Filters_2013_CVPR_paper.html:text/html},
 }
 
 @inproceedings{zhou_greedy_2013,
 	title = {Greedy Bilateral Sketch, Completion \& Smoothing},
-	url = {https://proceedings.mlr.press/v31/zhou13b.html},
+	%url = {https://proceedings.mlr.press/v31/zhou13b.html},
 	abstract = {Recovering a large low-rank matrix from highly corrupted, incomplete or sparse outlier overwhelmed observations is the crux of various intriguing statistical problems. We explore the power of "greedy bilateral ({GreB})" paradigm in reducing both time and sample complexities for solving these problems. {GreB} models a low-rank variable as a bilateral factorization, and updates the left and right factors in a mutually adaptive and greedy incremental manner. We detail how to model and solve low-rank approximation, matrix completion and robust {PCA} in {GreB}’s paradigm. On their {MATLAB} implementations, approximating a noisy 10000x10000 matrix of rank 500 with {SVD} accuracy takes 6s; {MovieLens}10M matrix of size 69878x10677 can be completed in 10s from 30\% of 10{\textasciicircum}7 ratings with {RMSE} 0.86 on the rest 70\%; the low-rank background and sparse moving outliers in a 120x160 video of 500 frames are accurately separated in 1s. This brings 30 to 100 times acceleration in solving these popular statistical problems.},
 	eventtitle = {Artificial Intelligence and Statistics},
 	pages = {650--658},
 	booktitle = {Proceedings of the Sixteenth International Conference on Artificial Intelligence and Statistics},
 	publisher = {{PMLR}},
 	author = {Zhou, Tianyi and Tao, Dacheng},
-	urldate = {2022-03-10},
 	date = {2013-04-29},
 	langid = {english},
 	note = {{ISSN}: 1938-7228},
 	file = {Full Text PDF:/home/stephan/snap/zotero-snap/common/Zotero/storage/FHS7RRHQ/Zhou und Tao - 2013 - Greedy Bilateral Sketch, Completion & Smoothing.pdf:application/pdf},
 }
 
+%=====================================================================================================================
+%Neural Nets
+%=====================================================================================================================
+
+
+@incollection{Torch,
+title = {PyTorch: An Imperative Style, High-Performance Deep Learning Library},
+author = {Paszke, Adam and Gross, Sam and Massa, Francisco and Lerer, Adam and Bradbury, James and Chanan, Gregory and Killeen, Trevor and Lin, Zeming and Gimelshein, Natalia and Antiga, Luca and Desmaison, Alban and Kopf, Andreas and Yang, Edward and DeVito, Zachary and Raison, Martin and Tejani, Alykhan and Chilamkurthy, Sasank and Steiner, Benoit and Fang, Lu and Bai, Junjie and Chintala, Soumith},
+booktitle = {Advances in Neural Information Processing Systems 32},
+editor = {H. Wallach and H. Larochelle and A. Beygelzimer and F. d\textquotesingle Alch\'{e}-Buc and E. Fox and R. Garnett},
+pages = {8024--8035},
+year = {2019},
+publisher = {Curran Associates, Inc.},
+url = {http://papers.neurips.cc/paper/9015-pytorch-an-imperative-style-high-performance-deep-learning-library.pdf}
+}
+
+
+@InProceedings{sandler_mobilenetv2_2019,
+author = {Sandler, Mark and Howard, Andrew and Zhu, Menglong and Zhmoginov, Andrey and Chen, Liang-Chieh},
+title = {MobileNetV2: Inverted Residuals and Linear Bottlenecks},
+booktitle = {Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+date = {2019-03-21}
+} 
 %=====================================================================================================================
 %Others
 %=====================================================================================================================
@@ -503,7 +533,6 @@ Trained Models at http://dx.doi.org/10.5281/zenodo.53189},
 	title = {Johann Faulhaber and sums of powers},
 	volume = {61},
 	issn = {0025-5718, 1088-6842},
-	url = {http://arxiv.org/abs/math/9207222},
 	doi = {10.1090/S0025-5718-1993-1197512-7},
 	abstract = {Early 17th-century mathematical publications of Johann Faulhaber contain some remarkable theorems, such as the fact that the \$r\$-fold summation of \$1{\textasciicircum}m,2{\textasciicircum}m,...,n{\textasciicircum}m\$ is a polynomial in \$n(n+r)\$ when \$m\$ is a positive odd number. The present paper explores a computation-based approach by which Faulhaber may well have discovered such results, and solves a 360-year-old riddle that Faulhaber presented to his readers. It also shows that similar results hold when we express the sums in terms of central factorial powers instead of ordinary powers. Faulhaber's coefficients can moreover be generalized to factorial powers of noninteger exponents, obtaining asymptotic series for \$1{\textasciicircum}\{{\textbackslash}alpha\}+2{\textasciicircum}\{{\textbackslash}alpha\}+...+n{\textasciicircum}\{{\textbackslash}alpha\}\$ in powers of \$n{\textasciicircum}\{-1\}(n+1){\textasciicircum}\{-1\}\$.},
 	pages = {277--294},
@@ -511,7 +540,6 @@ Trained Models at http://dx.doi.org/10.5281/zenodo.53189},
 	journaltitle = {Mathematics of Computation},
 	shortjournal = {Math. Comp.},
 	author = {Knuth, Donald E.},
-	urldate = {2022-04-16},
 	date = {1993},
 	eprinttype = {arxiv},
 	eprint = {math/9207222},
