Algorithm to split up a matrix in four segemnts where teh blockdiagonals have a reduced nuclear norm

--- a/Code/NuclearNormOptim/Subdivide_D.ipynb
+++ b/Code/NuclearNormOptim/Subdivide_D.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sundivide $D$\n",
+    "# Subdivide $D$\n",
     "\n",
     "Notebook to optimize \n",
     "\n",
@@ -23,7 +23,10 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy.linalg import block_diag\n",
-    "from scipy.linalg import svdvals"
+    "from scipy.linalg import svdvals\n",
+    "\n",
+    "import torchvision.models as models\n",
+    "import torch"
    ]
   },
   {
@@ -317,16 +320,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "A = np.random.rand(100,120)\n",
-    "\n",
-    "f_base = np.linalg.norm(A[:A.shape[0]//2,:A.shape[1]//2],'nuc') \\\n",
-    "    +np.linalg.norm(A[A.shape[0]//2:,A.shape[1]//2:],'nuc')\n",
-    "print(f_base)"
+    "A = np.random.rand(100,120)"
    ]
   },
   {
@@ -334,6 +331,36 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def get_mobilenet_target_mats():\n",
+    "    target_mats = []\n",
+    "    # Load the model\n",
+    "    model = models.mobilenet_v2(pretrained=True)\n",
+    "    # Put moel into eval mode\n",
+    "    model.eval()\n",
+    "    for layer in model.classifier:\n",
+    "        if isinstance(layer, torch.nn.Linear):\n",
+    "            # Obtain the weights of this layer\n",
+    "            weights = layer.weight.detach().numpy()\n",
+    "            target_mats.append(weights)\n",
+    "    return target_mats\n",
+    "A = get_mobilenet_target_mats()[0][:350,:350]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f_base = np.linalg.norm(A[:A.shape[0]//2,:A.shape[1]//2],'nuc') \\\n",
+    "    +np.linalg.norm(A[A.shape[0]//2:,A.shape[1]//2:],'nuc')\n",
+    "print(f_base)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
    "source": [
     "N = 50\n",
     "\n",
@@ -358,8 +385,6 @@
     "\n",
     "    f_ref = f(Ma,Mb,s_col)\n",
     "\n",
-    "\n",
-    "    \n",
     "    Ua,sa,Vta = np.linalg.svd(Ma[:,s_col],full_matrices=False) \n",
     "    Ub,sb,Vtb = np.linalg.svd(Mb[:,~s_col],full_matrices=False) \n",
     "    fs = get_f_change(Ua,sa,Vta,Ub,sb,Vtb,Ma,Mb,s_col)\n",
@@ -410,7 +435,118 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(fs_list)\n",
+    "N = 50\n",
+    "\n",
+    "\n",
+    "fs_list = np.zeros(N+1)\n",
+    "s_cols=np.zeros((N+1,A.shape[1])) \n",
+    "s_rows=np.zeros((N+1,A.shape[0])) \n",
+    "\n",
+    "\n",
+    "s_col,s_row = get_initial(A)\n",
+    "Ma = A[s_row]\n",
+    "Mb = A[~s_row]\n",
+    "\n",
+    "fs_list[0] = f(Ma,Mb,s_col)\n",
+    "s_cols[0]=s_col\n",
+    "s_rows[0]=s_row\n",
+    "\n",
+    "\n",
+    "#gamma = 1e3 #maxbee have two different regularizations for rows and collumns\n",
+    "f_reg_row = lambda x: gamma*x**2\n",
+    "f_reg_col = lambda x: gamma*x**2\n",
+    "\n",
+    "gamma = 1e4 #maxbee have two different regularizations for rows and collumns\n",
+    "#f_reg_row = lambda x: gamma*x\n",
+    "#f_reg_col = lambda x: gamma*x\n",
+    "\n",
+    "\n",
+    "for n in range(N):\n",
+    "    Ma = A[s_row]\n",
+    "    Mb = A[~s_row]\n",
+    "\n",
+    "    f_ref = f(Ma,Mb,s_col)\n",
+    "\n",
+    "    Ua,sa,Vta = np.linalg.svd(Ma[:,s_col],full_matrices=False) \n",
+    "    Ub,sb,Vtb = np.linalg.svd(Mb[:,~s_col],full_matrices=False) \n",
+    "    fs = get_f_change(Ua,sa,Vta,Ub,sb,Vtb,Ma,Mb,s_col)\n",
+    "\n",
+    "\n",
+    "    #transposed problem\n",
+    "    Mat = A.T[s_col]\n",
+    "    Mbt = A.T[~s_col]\n",
+    "    fst = get_f_change(Vta.T,sa,Ua.T,Vtb.T,sb,Ub.T,Mat,Mbt,s_row)\n",
+    "\n",
+    "\n",
+    "\n",
+    "    #flip some columns\n",
+    "    ordering = np.argsort(fs)\n",
+    "    ord_neg_a = ordering[np.logical_and(fs[ordering]-f_ref<0,s_col[ordering])]\n",
+    "    ord_neg_b = ordering[np.logical_and(fs[ordering]-f_ref<0,~s_col[ordering])]\n",
+    "    \n",
+    "    #note that the counting here is filpped as we need future values\n",
+    "    overshoot_a_base = np.count_nonzero(~s_col)-np.floor_divide(len(s_col),2)\n",
+    "    overshoot_b_base = np.count_nonzero(s_col)-np.floor_divide(len(s_col),2)\n",
+    "    \n",
+    "    overshoot_a = np.clip(overshoot_a_base + np.arange(len(ord_neg_a)),0,None)\n",
+    "    overshoot_b = np.clip(overshoot_b_base + np.arange(len(ord_neg_b)),0,None)\n",
+    "    #overshoot_a = overshoot_a_base + np.arange(len(ord_neg_a))\n",
+    "    #overshoot_b = overshoot_b_base + np.arange(len(ord_neg_b))\n",
+    "    print(\"a\",overshoot_a)\n",
+    "    print(\"b\",overshoot_b)\n",
+    "    \n",
+    "    flip_a=ord_neg_a[fs[ord_neg_a]-f_ref<-f_reg_col(overshoot_a)]\n",
+    "    flip_b=ord_neg_b[fs[ord_neg_b]-f_ref<-f_reg_col(overshoot_b)]\n",
+    "\n",
+    "    s_col[flip_a] = False\n",
+    "    s_col[flip_b] = True\n",
+    "    \n",
+    "    n_flip_c = len(flip_a)+len(flip_b)\n",
+    "    #print(\"cols: filp a\",len(flip_a))\n",
+    "    #print(\"cols: filp b\",len(flip_b))\n",
+    "\n",
+    "\n",
+    "    #flip some rows\n",
+    "    ordering = np.argsort(fst)\n",
+    "    ord_neg_a = ordering[np.logical_and(fst[ordering]-f_ref<0,s_row[ordering])]\n",
+    "    ord_neg_b = ordering[np.logical_and(fst[ordering]-f_ref<0,~s_row[ordering])]\n",
+    "    \n",
+    "    #note that the counting here is filpped as we need future values\n",
+    "    overshoot_a_base = np.count_nonzero(~s_row)-np.floor_divide(len(s_row),2)\n",
+    "    overshoot_b_base = np.count_nonzero(s_row)-np.floor_divide(len(s_row),2)\n",
+    "    \n",
+    "    overshoot_a = np.clip(overshoot_a_base + np.arange(len(ord_neg_a)),0,None)\n",
+    "    overshoot_b = np.clip(overshoot_b_base + np.arange(len(ord_neg_b)),0,None)\n",
+    "    #overshoot_a = overshoot_a_base + np.arange(len(ord_neg_a))\n",
+    "    #overshoot_b = overshoot_b_base + np.arange(len(ord_neg_b))\n",
+    "    \n",
+    "    flip_a=ord_neg_a[fst[ord_neg_a]-f_ref<-f_reg_row(overshoot_a)]\n",
+    "    flip_b=ord_neg_b[fst[ord_neg_b]-f_ref<-f_reg_row(overshoot_b)]\n",
+    "\n",
+    "    s_row[flip_a] = False\n",
+    "    s_row[flip_b] = True\n",
+    "    \n",
+    "    n_flip_r = len(flip_a)+len(flip_b)\n",
+    "    #print(\"rows: filp a\",len(flip_a))\n",
+    "    #print(\"rows: filp b\",len(flip_b))\n",
+    "    \n",
+    "    fs_list[n+1] = f(Ma,Mb,s_col)\n",
+    "    s_cols[n+1]=s_col\n",
+    "    s_rows[n+1]=s_row\n",
+    "    \n",
+    "    if n_flip_r==0 and n_flip_c==0:\n",
+    "        print(\"reached optimum\")\n",
+    "        break\n",
+    "print(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(fs_list[:n])\n",
     "plt.hlines(f_base,0,n+1)"
    ]
   },
@@ -430,6 +566,24 @@
    "outputs": [],
    "source": [
     "plt.spy(s_rows[:n])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(s_rows[:n]);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(s_cols[:n]);"
    ]
   },
   {
@@ -463,6 +617,143 @@
    "source": [
     "s_row[fst<f_start] = ~s_row[fst<f_start]"
    ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "#standarg regularization does not work, as it consideres the elements independently\n",
+    "\n",
+    "def f_reg(v):\n",
+    "    \"\"\"\n",
+    "    regularization function\n",
+    "    \"\"\"\n",
+    "    l = np.count_nonzero(v)\n",
+    "    return gamma*l*(len(v)-l)-(len(v)/2)**2\n",
+    "\n",
+    "def get_f_reg_change(v):\n",
+    "    \"compute the regularization function for flipped\"\n",
+    "    fs = np.zeros(len(v))\n",
+    "    l = np.count_nonzero(v)\n",
+    "    f_current = gamma*l*(len(v)-l)-(len(v)/2)**2\n",
+    "    #currently in set -> reduce after flip\n",
+    "    fs[v]=  gamma*(l-1)*(len(v)-(l-1))-(len(v)/2)**2-f_current\n",
+    "    fs[~v]=  gamma*(l+1)*(len(v)-(l+1))-(len(v)/2)**2-f_current\n",
+    "    return fs\n",
+    "    \n",
+    "#in functiuon itself\n",
+    "    #flip some columns\n",
+    "    flip = fs+get_f_reg_change(s_col)<f_ref\n",
+    "    ordering = np.argsort(fs)\n",
+    "    s_col[flip]  = ~s_col[flip]\n",
+    "    n_flip_c = np.count_nonzero(flip)\n",
+    "\n",
+    "    #flip some rows\n",
+    "    flip = fst+get_f_reg_change(s_row)<f_ref\n",
+    "    s_row[flip] = ~s_row[flip]\n",
+    "    n_flip_r = np.count_nonzero(flip)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ord_neg_a = ordering[fs[ordering<0]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fs = np.random.rand(10)-0.3\n",
+    "fs\n",
+    "s_col=np.zeros_like(fs,dtype=bool)\n",
+    "ordering = np.argsort(fs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ord_neg_a = ordering[np.logical_and(fs[ordering]<0,~s_col[ordering])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ord_neg_a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fs[ord_neg_a]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.clip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l = np.count_nonzero(s_col)\n",
+    "np.arange(l,len(s_col))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s_col[1]=0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s_col"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
